Add reset button post game and make it work

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 				<div class="col-sm-2 col-sm-offset-1">
 					<button class="stand-button">Stand</button>
 				</div>
-
 			</div>
+
+			<div class="message">Here is a message</div>
 
  		</div> <!-- End the table -->
  	</div> <!-- End overall Row -->
